# logseq-chat

./: .gitignore  LICENSE  Makefile  README.md  app_config.py  chat.py  config.yaml.sample  ingest.py  pyproject.toml  query_expansion.py
.github/workflows/: tests.yml
config/presets/: default.yaml  high_recall.yaml  lightweight.yaml
evaluation/: runner.py
evaluations/: configurations.yaml
evaluations/datasets/: baseline.yaml
tests/: test_ingest.py
