[project]
name = "logseq-chat"
version = "0.1.0"
description = "Local RAG over Logseq with LlamaIndex + Ollama + Chroma"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.2",
    "llama-index>=0.14.7",
    "llama-index-embeddings-ollama>=0.8.3",
    "llama-index-llms-ollama>=0.9.0",
    "llama-index-vector-stores-chroma>=0.5.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
    "tests",
]
